--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.1",
     "reflect-metadata": "^0.1.13",
     "save-dev": "^0.0.1-security",
@@ -77,6 +78,7 @@
     "@typescript-eslint/parser": "^5.8.0",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
+    "circular-json": "^0.5.9",
     "eslint": "^8.5.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
